[project]
name = "scikit-nano"
version = "0.3.22"
description = "Python toolkit for nanoscience."
authors = [{ name = "Andrew Merrill", email = "androomerrill@gmail.com" }]
dependencies = [
    "atomicfile>=1.0",
    "cython>=0.23.4",
    "future>=0.15.2",
    "monty>=0.8.0",
    "numpy>=1.10.4",
    "numexpr>=2.5",
    "matplotlib>=1.5.1",
    "palettable>=2.1.1",
    "pandas>=0.18.0",
    "ptable>=0.9.2",
    "pybtex>=0.19",
    "pyhull>=1.5.4",
    "pymatgen>=3.3.6",
    "pyparsing>=2.1.1",
    "pyyaml>=3.11",
    "tables>=3.2.2",
    "requests>=2.9.1",
    "scipy>=0.17.0",
    "six>=1.10.0",
    "tabulate>=0.7.5",
    "wheel>=0.29.0",
    "setuptools<60",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = { text = "BSD-2-Clause" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.poetry]
name = "scikit-nano"
version = "0.3.22"
authors = ["Andrew Merrill <androomerrill@gmail.com>"]
description = "Python toolkit for nanoscience."

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
atomicfile = ">=1.0"
cython = ">=0.23.4"
future = ">=0.15.2"
monty = ">=0.8.0"
numpy = ">=1.10.4"
numexpr = ">=2.5"
matplotlib = ">=1.5.1"
palettable = ">=2.1.1"
pandas = ">=0.18.0"
ptable = ">=0.9.2"
pybtex = ">=0.19"
pyhull = ">=1.5.4"
pymatgen = ">=3.3.6"
pyparsing = ">=2.1.1"
pyyaml = ">=3.11"
tables = ">=3.2.2"
requests = ">=2.9.1"
scipy = ">=0.17.0"
six = ">=1.10.0"
tabulate = ">=0.7.5"
wheel = ">=0.29.0"
setuptools = "<60"
